# vihcsr04

./: CMakeLists.txt  CMakePresets.json  README.md  codecoverage.sh
core/: CMakeLists.txt
core/src/: vihcsr04.c  vihcsr04.cpp
core/src/inc/: vihcsr04.h  vihcsr04.hpp  vihcsr04_private.h
tests/: tst_vihcsr04.c
tests/main/: main.c
